[package]
name = "dgraph"
version = "0.3.1"
authors = ["Swoorup Joshi"]
description = "A rust client for Dgraph database"
readme = "README.md"
license = "MIT"
keywords = ["dgraph", "grpc"]
repository = "https://github.com/Swoorup/dgraph-rs"
homepage = "https://github.com/Swoorup/dgraph-rs"
edition = "2018"

[dependencies]
grpcio = "0.5.0"
futures = "0.1.25"
protobuf = "2.11.0"
rand = "0.6.5"
protoc-grpcio = { version = "1.1.0", optional = true }
cfg-if = "0.1.10"

[dev-dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
geojson = "0.18.0"

[features]
default = ["dgraph-1-0"]
dgraph-1-0 = []
dgraph-1-1 = []
compile-protobufs = ["protoc-grpcio"]

[[bin]]
doc = false
name = "protoc-1-0"
path = "compile-protobufs-1-0.rs"
required-features = ["compile-protobufs"]

[[bin]]
doc = false
name = "protoc-1-1"
path = "compile-protobufs-1-1.rs"
required-features = ["compile-protobufs"]
