[package]
name = "dgraph"
version = "0.3.1"
authors = ["Swoorup Joshi"]
description = "A rust client for Dgraph database"
readme = "README.md"
license = "MIT"
keywords = ["dgraph", "grpc"]
repository = "https://github.com/Swoorup/dgraph-rs"
homepage = "https://github.com/Swoorup/dgraph-rs"
edition = "2018"

[dependencies]
grpcio = "0.6.0"
futures = "0.3.5"
protobuf = "2.16.2"
rand = "0.7.2"
protoc-grpcio = { version = "2.0.0", optional = true }
cfg-if = "0.1.10"
log = "0.4.11"

[dev-dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
geojson = "0.19.0"

[features]
default = ["dgraph-1-0"]
dgraph-1-0 = []
dgraph-1-1 = []
compile-protobufs = ["protoc-grpcio"]
openssl = ["grpcio/openssl"]
openssl-vendored = ["grpcio/openssl-vendored"]

[[bin]]
doc = false
name = "protoc-1-0"
path = "compile-protobufs-1-0.rs"
required-features = ["compile-protobufs"]

[[bin]]
doc = false
name = "protoc-1-1"
path = "compile-protobufs-1-1.rs"
required-features = ["compile-protobufs"]
